--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <main>
       <div class="container">
         <div class="qr-card">
-          <img src="/images/image-qr-code.png" alt="qr code image" class="qr-card__img">
+          <img src="./images/image-qr-code.png" alt="qr code image" class="qr-card__img">
           <p class="heading-text">Improve your front-end skills by building projects</p>
           <p class="paragraph-text">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
         </div>
