Edit Heading level element

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div class="container">
         <div class="qr-card">
           <img src="./images/image-qr-code.png" alt="qr code image" class="qr-card__img">
-          <p class="heading-text">Improve your front-end skills by building projects</p>
+          <h1 class="heading-text">Improve your front-end skills by building projects</h1>
           <p class="paragraph-text">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
         </div>
       </div>
